Get user returns simplified associated gangs.
